# CommonDataLayer

./: .dockerignore  Cargo.toml  Dockerfile  bin.Dockerfile  build.sh  requirements.txt  workspace.Dockerfile
.github/workflows/: check-docs.yml  publish-head.yml
benchmarking/: Cargo.toml
blob-store/: Cargo.toml
cdl-cli/src/: args.rs  main.rs
command-service/: Cargo.toml
command-service/src/: args.rs  main.rs
data-router/: Cargo.toml
data-router/src/: main.rs
docs/: Command-Service.md  Data-Router.md  Getting-Started.md  K8s-Local-Deployment.md  Query-Service.md
document-storage/: Cargo.toml
examples/deploy/: SETUP.md  docker-compose.yml
helm/cdl/: values-local.yaml  values.yaml
helm/helm-infrastructure/: Chart.yaml  values.yaml
leader-elector/: Cargo.toml
query-router/: Cargo.toml
query-router/src/: cache.rs  handler.rs  main.rs
query-service/: Cargo.toml
query-service-ts/: Cargo.toml
query-service-ts/proto/: query.proto
query-service-ts/src/: druid.rs  helper_types.rs  lib.rs  main.rs  victoria.rs
query-service/src/: druid.rs  ds.rs  lib.rs  main.rs
rpc/: Cargo.toml  build.rs
rpc/proto/: schema_registry.proto
rpc/src/: lib.rs  schema_registry.rs
schema-registry/: Cargo.toml
schema-registry/src/: db.rs  error.rs  grpc.rs  lib.rs  main.rs  rpc.rs  types.rs
tests/: docker-compose.yml
tests/common/: command_service.py  config.py  query_router.py  query_service.py  query_service_ts.py  schema_registry.py
tests/query_router/: __init__.py  test_endpoint_single.py  test_endpoints.py
utils/: Cargo.toml
utils/src/: lib.rs  (+1 more)
(+21 files in other folders)
